--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -275,7 +275,7 @@ resources,
 $f'(\rho) = f(\rho + \Delta)$.
 Similarly, an {\bf economy service} that allows to be assigned to more
 loaded resources can be made by shifting the cost function to the
-right.  It could be appealing to enable multiple classes using the same
+right.  It could be appealing to enable multiple classes using a single
 resource pool with a single shift parameter.
 
 \begin{figure}[tb]
