--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -125,22 +125,18 @@ and how jobs for MDCs can be offloaded to upstream DCs.
 % \end{figure}
 
 % \begin{figure}[tb]
-%   \begin{center}
-%     \includegraphics[width=1.0\columnwidth]{complex-full-convex.pdf}
-%     \vspace{-2.0ex}
-%     \caption{Complex scenario with convex nodes and monotonic links}
-%     \label{fig:complex-convex}
-%   \end{center}
-% \end{figure}
+%   \centering
+%   \begin{subfigure}{\columnwidth}
+%       \includegraphics[width=\textwidth]{complex-convex-monotonic.pdf}
+%       \caption{Convex nodes and monotonic links}
+%       \label{fig:first}
+%   \end{subfigure}
 
-% \begin{figure}[tb]
-%   \begin{center}
-%     \includegraphics[width=1.0\columnwidth]{complex-full-monotonic.pdf}
-%     \vspace{-2.0ex}
-%     \caption{Complex scenario with convex nodes and monotonic links}
-%     \label{fig:complex-monotonic}
-%   \end{center}
-% \end{figure}
+%   \begin{subfigure}{\columnwidth}
+%       \includegraphics[width=\textwidth]{complex-full-convex.pdf}
+%       \caption{Convex nodes and links}
+%       \label{fig:second}
+%   \end{subfigure}
 
 \begin{figure}[tb]
   \centering
