--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -68,7 +68,7 @@ Microservice jobs are assigned to reduce the execution cost that
 consists of computing cost, communication cost with the user, access
 cost to database, and other factors.
 For examples, an interactive task will follow the user when the user
-moves, while a data intensive task will stay close to the data
+moves, while a data-intensive task will stay close to the data
 regardless of the user location.
 Edge computing is automatically formed using resources close to
 the users.
