--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -52,6 +52,13 @@ the settings are described in the simulation tool.
     \vspace{-2.0ex}
     \caption{Cost manipulations (S3): raising the cost x2,
       x10 and the weight for data access}
+    \smallskip
+    \raggedright
+    \small
+    Note that the capacity of DCs is 10 times larger than that of MDCs
+    so that DC's load looks much smaller for the same volume of jobs.
+    In the total load (bottom), the volume is normalized to MDC to
+    show the total volume of jobs.
     \Description{Simulation results to illustrate the effects of cost manipulations.}
     \label{fig:lowering}
   \end{center}
@@ -77,12 +84,12 @@ increased, and all jobs are assigned to the node that has the object
 \subsection{Mixed Behaviors}
 
 A more complex scenario is shown in Figure~\ref{fig:mixed}.
-Again, the topology in Figure~\ref{fig:lowering} is used, and
+Again, the topology in Figure~\ref{fig:system} is used, and
 random fluctuation is added to the interval and duration of the jobs.
 A series of jobs are generated
 between user0 at MDC0 and an object at DC3, and
 between user1 at MDC1 and an object at DC2.
-Both have the ratio of $1:2$ for interactive and data-intensive jobs.
+Both have the ratio of $1:2$ for interactive vs. data-intensive jobs.
 User1's jobs are increased by a factor of 2 in the third wave (time
 360-540), and by a factor of 10 in the fourth wave (time 540-720). 
 Before time 360, interactive jobs are assigned closer to the user,
@@ -91,9 +98,11 @@ In the third wave, MDC1 reaches the upper limit and overflowing jobs are
 assigned to DC2.
 In the fourth wave, the link MDC1-DC2 reaches the upper limit so that
 overflowing jobs are assigned to DC3.
-To absorb the surge in the fourth wave in this scenario, enough
-capacity is provided to the link MDC1-DC3.
-This scenario illustrates the responsive behavior of the system.
+(To absorb the surge in the fourth wave in this scenario, enough
+capacity is provided to the link MDC1-DC3.)
+This scenario illustrates the responsive behavior of the system,
+and how jobs for micro datacenters can be off-loaded to upstream data
+centers.
 
 \begin{figure}[tb]
   \begin{center}
@@ -167,5 +176,6 @@ The load of leaf-DCs and local-DCs are mostly around the target load
 $.75$.
 This simulation result illustrates
 the responsive behavior to changing load,
-and the convergence to the stable state by the idle-resource pooling.
+converging to stable states by the idle-resource pooling,
+and off-loading excess jobs to upstream data centers.
 
