--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -50,15 +50,16 @@ the settings are described in the simulation tool.
   \begin{center}
     \includegraphics[width=1.0\columnwidth]{lowering.pdf}
     \vspace{-2.0ex}
-    \caption{Cost manipulations (S3): raising the cost x2,
-      x10 and the weight for data access}
+    \caption{Cost manipulations: shifting the load +.2,
+      +.4 and raising the weight for data access}
     \smallskip
     \raggedright
     \small
     Note that the capacity of DCs is 10 times larger than that of MDCs
     so that DC's load looks much smaller for the same volume of jobs.
-    In the total load (bottom), the volume is normalized to MDC to
-    show the total volume of jobs.
+    In the normalizede total load (bottom), the volume is normalized
+    to the capacity of MDC to show the total volume of jobs:
+    $\sum \tilde{\rho}$, \:$\tilde{\rho} = \rho \cdot C/C_{MDC}$.
     \Description{Simulation results to illustrate the effects of cost manipulations.}
     \label{fig:lowering}
   \end{center}
@@ -73,10 +74,10 @@ In the first wave,  most of the jobs are assigned to the node closest
 to the user (MDC0) but some overflowing jobs are assigned to DC2.
 The peak load of MDC0 is .80 in the first wave.
 In the second and the third waves, the cost function of MDC0 is
-manipulated to reduce the load by adding $1.0$ and $1.4$ respectively to
-the cost function of MDC0. As a result, the peak load of MDC0 is
-reduced from $.80$ to $.74$ in the second wave, and the jobs are
-completely moved to DC2 in the third wave.
+manipulated to reduce the load by shifting the load by $.2$ and $.4$
+respectively. As a result, the peak load of MDC0 is
+reduced from $.8$ to $.6$ in the second wave, and then, to $.4$ in the
+third wave.
 In the fourth wave, the weight for the backend communication is
 increased, and all jobs are assigned to the node that has the object
 (DC3).
@@ -85,13 +86,14 @@ increased, and all jobs are assigned to the node that has the object
 
 A more complex scenario is shown in Figure~\ref{fig:mixed}.
 Again, the topology in Figure~\ref{fig:system} is used, and
-random fluctuation is added to the interval and duration of the jobs.
+random fluctuation is added to the interval and duration of jobs.
 A series of jobs are generated
 between user0 at MDC0 and an object at DC3, and
 between user1 at MDC1 and an object at DC2.
 Both have the ratio of $1:2$ for interactive vs. data-intensive jobs.
-User1's jobs are increased by a factor of 2 in the third wave (time
-360-540), and by a factor of 10 in the fourth wave (time 540-720). 
+To observe offloading behaviors, user1's jobs are increased by a
+factor of 2 in the third wave (time 360-540), and by a factor of 10 in
+the fourth wave (time 540-720). 
 Before time 360, interactive jobs are assigned closer to the user,
 and data intensive jobs are assigned closer to the data.
 In the third wave, MDC1 reaches the upper limit and overflowing jobs are
@@ -101,14 +103,14 @@ overflowing jobs are assigned to DC3.
 (To absorb the surge in the fourth wave in this scenario, enough
 capacity is provided to the link MDC1-DC3.)
 This scenario illustrates the responsive behavior of the system,
-and how jobs for micro datacenters can be off-loaded to upstream data
+and how jobs for micro datacenters can be offloaded to upstream data
 centers.
 
 \begin{figure}[tb]
   \begin{center}
     \includegraphics[width=1.0\columnwidth]{simu2.pdf}
     \vspace{-2.0ex}
-    \caption{Mixed load with 2 DCs and 2 MDCs (S4)}
+    \caption{Mixed load with 2 DCs and 2 MDCs}
     \Description{Simulation results with mixed scenario.}
     \label{fig:mixed}
   \end{center}
@@ -175,7 +177,7 @@ Jobs are generated from all leaf-DCs and local-DCs.
 The load of leaf-DCs and local-DCs are mostly around the target load
 $.75$.
 This simulation result illustrates
-the responsive behavior to changing load,
-converging to stable states by the idle-resource pooling,
-and off-loading excess jobs to upstream data centers.
+quick responses to changing load,
+yet converging to stable states once the load is settled,
+and offloading excess jobs to upstream data centers.
 
