--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -14,9 +14,8 @@ Next challenge would be to virtualize cloud infrastructure!
 By decoupling infrastructure management from service management,
 cloud resources such as servers and networks can be provided with a
 pay-as-you-go model.
-Then, cloud operators are liberated from hardware resource management.
-This is similar to what happens to system administrators by cloud
-computing.
+Then, cloud operators are liberated from hardware resource management,
+as was the case for system administrators by cloud computing.
 Moreover, it is not enough to shift responsibility to operators of the
 new lower infrastructure layer. We need a new self-managing
 infrastructure layer which does not require human operators.
