--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -58,7 +58,7 @@ the settings are described in the simulation tool.
     Note that the capacity of DCs is 10 times larger than that of MDCs
     so that DC's load looks much smaller for the same volume of jobs.
     In the normalizede total load (bottom), the volume is normalized
-    to the capacity of MDC to show the total volume of jobs:
+    to the capacity $C$ of MDC to show the total volume of jobs:
     $\sum \tilde{\rho}$, \:$\tilde{\rho} = \rho \cdot C/C_{MDC}$.
     \Description{Simulation results to illustrate the effects of cost manipulations.}
     \label{fig:lowering}
