add a plot for 18node-scenario

--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -259,7 +259,8 @@ The utilization of a resource can be manipulated by modifying the cost
 function of the resource as shown in Figure~\ref{fig:costfunc3}.
 
 One can {\bf lower or raise the utilization} of a resource by shifting
-the load and adjusting the target load, $f'(\rho) = f(\rho + \Delta)$.
+the load in the cost function and adjusting the target load,
+$f'(\rho) = f(\rho + \Delta)$.
 
 To {\bf change the activation order} in the idlle-resource pooling,
 one can raise or lower the cost,
