--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -23,7 +23,7 @@ A path selection mechanism is also needed when assigning a job,
 probably using a source routing mechanism.
 
 There exists a rich area for further research:
-One topic is {\bf auto-tuning of the cost functions}.
+one topic is {\bf auto-tuning of the cost functions}.
 It may not be straightforward to obtain expected results by tuning the
 convex cost function due to the interactions between load-balancing
 and idle-resource pooling.
@@ -54,7 +54,7 @@ The location of data is critical for the pseudo cost so that
 {\bf data placement} would play an important role for cloud morphing. 
 A possible approach is to migrate data at coarser timescale, based
 on usage history.
-Another possibility is design a new distributed storage system
+Another possibility is to design a new distributed storage system
 suitable for the cloud morphing model in which (cached) data can be
 easily moved.
 
