--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -45,10 +45,10 @@ layers/standard/.define layer set={%
     In this model, the pseudo cost of a resource is a function of the
     load, and the required resources for a job are allocated by a simple
     cost minimization algorithm.
-    We introduce a convex cost function that enables automatic
+    We introduce a convex cost function that enables autonomous
     load-balancing and idle-resource pooling within the cloud, and allows
     stakeholders to loosely control the utilization of each resource by
-    manipulating the cost function and the resource weights of jobs.
+    manipulating the cost function and the resource weights of micro-jobs.
     We examine different cost tuning methods for adjusting
     utilization, and illustrate their behaviors by simulation.
 
