--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -3,18 +3,18 @@
 %% cloud and virtualization technologies
 Cloud computing was brought about by virtualization technologies,
 enabling to build large pools of virtualized computing resources (e.g.,
-servers, storage, network) and dynamically allocate necessary resources
+servers, storage, and network) and dynamically allocate necessary resources
 for providing services.
 However, cloud computing system itself is still on physical cloud
-infrastructure, that is, cloud system operators manually manage
+infrastructure; cloud system operators manually manage
 physical servers and network switches to meet the overall demands
 so as not to overload certain resources.
 
-Next challenge would be to virtualize cloud infrastructure!
+The next challenge would be to virtualize cloud infrastructure!
 By decoupling infrastructure management from service management,
 cloud resources such as servers and networks can be provided with a
 pay-as-you-go model.
-Then, cloud operators are liberated from hardware resource management,
+Then, cloud service operators are liberated from hardware resource management,
 as was the case for system administrators by cloud computing.
 Moreover, it is not enough to shift responsibility to operators of the
 new lower infrastructure layer. We need a new self-managing
@@ -28,7 +28,7 @@ Small-scale datacenters with a few racks or even a couple of servers
 can be placed at locations closer to the users, to reduce latencies
 or to store sensitive data on premise, and make them act as part of
 the cloud.
-One direction towards the future is distributed cloud computing that
+A possible future direction is distributed cloud computing that
 utilizes diverse and geographically scattered computing resources.
 It will require a new management mechanism to efficiently utilize such
 resources.
@@ -51,13 +51,11 @@ techniques to handling microservice jobs.
 
 %% energy saving?
 In addition, we should take energy saving into consideration as it is
-essential for future clouds, or even for future computing as a
-whole~\cite{Mastelic-2015,masanet2020recalibrating}.
+essential for future clouds~\cite{Mastelic-2015,masanet2020recalibrating}.
 
 \subsection{Cloud Morphing Vision}
 
-{\em Cloud Morphing} is our vision for cloud virtualization in the future:
-dynamically morphing clouds.
+{\em Cloud Morphing} is our vision for cloud virtualization in the future.
 By dynamically allocating microservices over distributed
 heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
@@ -69,7 +67,7 @@ cost to database, and other factors.
 For examples, an interactive task will follow the user when the user
 moves, while a data-intensive task will stay close to the data
 regardless of the user location.
-Edge computing is automatically formed using resources close to
+Edge computing is automatically formed by allocating resources close to
 the users.
 Moreover, services are inherently fault-tolerant and resilient
 against outages or disasters since faulty resources are
@@ -90,7 +88,8 @@ without affecting the stability of the system.
 
 To realize such systems, it requires various technical advances across
 many fields.  Among other things, new autonomous resource management
-model is needed for distributed diverse cloud resources.
+model is needed for distributed diverse cloud resources,
+which is the topic of this short paper.
 
 \subsection{Resource Management}
 
