--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -26,7 +26,7 @@ between the user and the data object.
 The load of a resource can be measured in a number of ways.  Most
 resources have some form of load report functions built-in.
 When the load of a resource fluctuates too rapidly,
-a smoothing filter such as an exponentially weighted moving average
+a smoothing filter (e.g., exponentially weighted moving average)
 can be used to stabilize the behavior.
 A load value does not need to be precise, and a rough approximation is
 enough for loose resource management.
@@ -146,11 +146,11 @@ The cost grows rapidly when $\rho > .75$.
 The system automatically tries to keep $\rho \le .75$,
 aiming at $\rho = .5$.
 
-The standard monotonic function is defined as:
+The standard monotonic cost function is defined as:
 \begin{equation*}
 	f(\rho) = \frac{\rho^{4.5}}{1 - \rho} + 1
 \end{equation*}
-to roughly match the standard convex function in $[.5, .75]$,
+to roughly match the standard convex cost function in $[.5, .75]$,
 the {\em working load range} explained in the next subsection.
 
 Note that the standard forms are defined just for convenience, and
@@ -175,7 +175,7 @@ Figure~\ref{fig:4node-ratio}.
   \hspace{0.8\columnsep}
 \end{figure}
 
-Assume a pool of 4 equivalent resources with the standard convex
+First, assume a pool of 4 equivalent resources with the standard convex
 cost function.
 Also, assume that micro-jobs are continuously assigned to the
 system; each micro-job is much smaller than the capacity of a
@@ -187,13 +187,13 @@ decreased back to $0$ until time 750.
 Here, load $1.0$ is the capacity of a single resource. 
 Initially, all resources in the pool are idle, and their costs are
 all $f(0)= 2$.
-First, one resource $r_{0}$ is randomly selected for allocation, and its
+For the first job, one resource $r_{0}$ is randomly selected for allocation, and its
 cost becomes lower: $f(0+) < 2$. As a result, subsequent jobs are
 assigned to $r_{0}$, with lowering cost towards $\rho = .5$ and then
 rising again until $\rho = .75$ where $f(.75) = 2 = f(0)$.
 At this point, another resource $r_{1}$ is selected for allocation.
 $r_{1}$ is preferred over $r_{0}$ as its cost becomes lower with new
-allocation so that both loads move towards $\rho_{0} = \rho_{1} = .5$,
+allocations so that both loads move towards $\rho_{0} = \rho_{1} = .5$,
 where both are balanced.
 Both loads rise again until $\rho_{r0} = \rho_{r1} = .75$,
 where the third resource $r_{2}$ kicks in.
@@ -241,12 +241,12 @@ $f_{r1}(0) = 4 = f_{r0}(.84)$.
 When $r_{1}$ is moving towards idle after time 550, the load
 of $r_{0}$ is $.75$ to satisfy: $f_{r1}(.5) = 2 = f_{r0}(.75)$
 
-For unequal resources in general, the required load to trigger new
-resource allocation would be higher than $\rho = .75$ for the already
+For unequal resources in general, the required load to trigger a new
+allocation is higher than $\rho = .75$ for the already
 active ones to match the cost $f(0)$ for the new one, but the load
 will not go much further as the slope of the cost function is steep.
 Similarly, when the most expensive one among active resources becomes
-idle, the load of the remaining ones stay at the matching cost at
+idle, the load of the remaining ones stay at the matching cost 
 $f(.5)$ for the deactivating one.
 
 %%Note that our goal is not to achieve the theoretical optimum but to
@@ -258,7 +258,7 @@ $f(.5)$ for the deactivating one.
 The utilization of a resource can be manipulated by modifying the cost
 function of the resource as shown in Figure~\ref{fig:costfunc3}.
 
-One can {\bf lower or raise the utilization} of a resource by shifting
+One can {\bf lower or raise the load level} of a resource by shifting
 the load in the cost function and adjusting the target load,
 $f'(\rho) = f(\rho + \Delta)$.
 
@@ -270,15 +270,15 @@ $f'(\rho) = f(\rho) + \Delta$.
 
 To make {\bf idle-resource pooling more aggressive},
 one can raise the cost at $\rho = 0$:
-e.g., to raise the cost at $\rho = 0$ by a factor of $n$,
+e.g., to raise the cost at $\rho = 0$ by a factor of $(n+1)/2$,
 $f'(\rho) = n (2\rho - 1)^{2}/(1 - \rho^{n}) + 1$.
 
 A {\bf premium service} can be realized by shifting the load
-in the same way as lowering the utilization
+in the same way as lowering the load level
 but for specific users or jobs (not for a specific resource) so as to
-have premium jobs being assigned to less loaded resources.
+have premium jobs always being assigned to less loaded resources.
 Similarly, an {\bf economy service} that allows to be assigned to more
-loaded resources can be made by shifting the load in the opposite direction.
+loaded resources can be made by a negative shift.
 It could be appealing to enable multiple classes using a single
 resource pool with a single shift parameter.
 
@@ -294,7 +294,8 @@ resource pool with a single shift parameter.
 
 Other than manipulating the cost function,
 cloud service providers can adjust the required resources and their
-weights.  Also, it is effective to place data objects close to the
+weights for a job.  Also, it is effective to place data objects close to the
 users, and both service providers and their users should have some
 control over where to store the data.
-
+Thus, the system allows stakeholders to loosely control the
+resource utilization.
