--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -4,46 +4,6 @@ that is publicly available from (URL removed for blind-review).
 We omit the details of the simulation settings in this paper but all
 the settings are described in the simulation tool.
 
-%%\subsection{Simulation settings}
-
-%%The simulation setting is shown in Figure~\ref{fig:topology-simple}.
-%%\begin{itemize}
-%%  \item		job: mean duration:4sec, mean 1 unit,
-%%        frontend 1, backend 2 for data intensive job,
-%%        frontend 2, backend 1 for interactive job,
-%%  \item		node: capacity 100 for MDC, 1000 for DC
-%%  \item		link: capacity 200 for MDC-DC, 1000 for DC-DC
-%%\end{itemize}
-%%
-%%\begin{figure}[tb]
-%%  \begin{center}
-%%    \includegraphics[width=7.5cm,clip]{topology-simple.pdf}
-%%    \vspace{-2.0ex}
-%%    \caption{simple simulation topology}
-%%    \Description{Simulation topology with 2 datacenters and 2 micro datacenters.}
-%%    \label{fig:topology-simple}
-%%  \end{center}
-%%\end{figure}
-%%
-%%Simulation scenarios:
-%%\begin{enumerate}
-%%  \item	{\bf node only:} 4 nodes without randomization to show how the
-%%        cost function works
-%%  \item	{\bf link only:} 4 links without randomization to show
-%%        different costs affects
-%%  \item	{\bf monotonic function:} same as above but use monotonic cost
-%%        function.
-%%  \item	{\bf randomize:} 4 nodes and 4 links with randomization
-%%  \item {\bf comparison:} compared with, no idle-resource pooling
-%%  \item	{\bf surge:} same as above but with a request surge at one location
-%%  \item	{\bf edge computing:} 2 nodes (big and small) and 1 link, the
-%%    users are closer to the small node. 2 types jobs (interactive,
-%%    data intensive).  show interactive jobs are on the small node,
-%%    data intensive jobs are on the big node.
-%%  \item {\bf premium service:} 4 nodes with 3 standard and 1 premium services.
-%%  \item	{\bf complex?:} realistic scenario
-%%\end{enumerate}
-
 \subsection{Basic Behaviors}
 
 \begin{figure}[tb]
@@ -55,23 +15,27 @@ the settings are described in the simulation tool.
     \smallskip
     \raggedright
     \small
-    Note that the capacity of DCs is 10 times larger than that of MDCs
-    so that DC's load looks much smaller for the same volume of jobs.
-    In the normalizede total load (bottom), the volume is normalized
-    to the capacity $C$ of MDC to show the total volume of jobs:
-    $\sum \tilde{\rho}$, \:$\tilde{\rho} = \rho \cdot C/C_{MDC}$.
     \Description{Simulation results to illustrate the effects of cost manipulations.}
     \label{fig:lowering}
   \end{center}
 \end{figure}
 
 The effects of manipulating the cost function and the resource weight
-for a job is illustrated in Figure~\ref{fig:lowering}.
+for a job is illustrated in Figure~\ref{fig:lowering} using the
+topology in Figure~\ref{fig:system}.
+The capacities of MDC and DC are set to 100 and 1,000.
+Note that the capacity of DCs is 10 times larger than that of MDCs
+so that DC's load in the top plot looks much smaller for the same
+volume of jobs.
+In the normalizede total load in the bottom plot, the volume is normalized
+to the capacity $C$ of MDC to show the total volume of jobs:
+$\sum \tilde{\rho}$, \:$\tilde{\rho} = \rho \cdot C/C_{MDC}$.
+
 Here, a series of interactive jobs of the same type are generated in
-4 waves between a user at MDC0 and an object at DC3 in
-Figure~\ref{fig:system}.
+4 waves between a user at MDC0 and an object at DC3.
 In the first wave,  most of the jobs are assigned to the node closest
-to the user (MDC0) but some overflowing jobs are offloaded to DC2.
+to the user (MDC0) but some overflowing jobs are offloaded to DC2, the
+upstream of MDC0.
 The peak load of MDC0 is $.8$ in the first wave.
 In the second and the third waves, the cost function of MDC0 is
 manipulated to reduce the load by shifting the load by $.2$ and $.4$
@@ -152,7 +116,8 @@ The last scenario in Figure~\ref{fig:18nodes} shows a more complex case with
 (capacity 100) connected by a FAT-tree.
 Each leaf-DC is connected to one local-DC, and a local-DC is connected to
 2 core-DCs and 2 other local-DCs, or just to 2 other local-DCs.
-Jobs are generated from all leaf-DCs and local-DCs.
+Jobs are randomly generated from all leaf-DCs and local-DCs, and data
+objects are populated at all DCs.
 The top plot shows the normalized total load $\sum \tilde{\rho}$
 divided into the 3 DC classes, which shows how excess jobs are
 offloaded to upstream DCs.
