--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -127,7 +127,7 @@ the cost functions in Sec.~\ref{sec:variation}.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{costfunc.pdf}
+    \includegraphics[width=0.9\columnwidth]{pseudo_costs.pdf}
     \vspace{-2.0ex}
     \caption{Standard cost functions}
     \Description{The standard convex cost function and standard
@@ -165,7 +165,7 @@ Figure~\ref{fig:4node-ratio}.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{4node.pdf}
+    \includegraphics[width=1.0\columnwidth]{equivalent_nodes.pdf}
     \vspace{-2.0ex}
     \caption{Load distribution among 4 equivalent cost nodes:
     the load of each resource (top) and the total load (bottom)}
@@ -221,7 +221,7 @@ $[.5, .75]$, while keeping idle resources as much as possible.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{4node-ratio.pdf}
+    \includegraphics[width=1.0\columnwidth]{proportional_nodes.pdf}
     \vspace{-2.0ex}
     \caption{Load distribution: 4 proportional cost nodes}
     \Description{Simulation results with 4 nodes with proportional cost functions.}
@@ -284,7 +284,7 @@ resource pool with a single shift parameter.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{costfunc3.pdf}
+    \includegraphics[width=0.9\columnwidth]{pseudo_costs_2.pdf}
     \vspace{-2.0ex}
     \caption{Manipulating convex cost functions}
     \Description{Variations of manipulated cost functions are shown.}
