--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -74,8 +74,8 @@ against outages or disasters since faulty resources are
 automatically evicted from the resource pool.
 
 From the operational perspective, the physical resource management
-becomes simpler, since physical nodes can be easily attached to or
-detached from the resource pool.
+becomes simpler with a larger resource pool.
+Physical nodes can be easily attached to or detached from the resource pool.
 When there is a consistent hotspot, it can be alleviated or solved by
 placing new resources close to the hotspot and then attaching them to
 the resource pool at a convenient time.
