--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -14,8 +14,8 @@ computing~\cite{Wang-hotcloud2010,Song-2014,Kilcioglu-SIGMETRICS2015,Song-INFOCO
 Resource allocation for edge computing and micro data centers also has
 a rich collection of work; most approaches are based on some form of
 optimization and many employ auction models.
-The topics are ranging from VM auctions in IaaS for welfare and profit
-maximization~\cite{Xu2017-zenith,Zhang2017-VMauction},
+The topics are ranging from VM auctions in
+IaaS~\cite{Zhang2017-VMauction,Zaman-2013},
 load balancing within a data center~\cite{Rikhtegar2021BiTEAD,Chen-SOCC-2014},
 to
 distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
