--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -126,7 +126,10 @@ Although the leaves handle only a small fraction of the total jobs,
 the load of the leaves stays at around $.75$ when they are
 active, except a short transient overshoot above $.8$ during the
 surge from time 680.
-The results illustrate quick responses to changing load,
+
+The results illustrate quick responses to changing load
+by offloading excess jobs to upstreams,
 yet converging to stable states once the load is settled,
-and offloading excess jobs to upstream data centers.
+while maintaining the load for each resource at around the target
+range.
 
