--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -482,3 +482,52 @@ keywords = {costs, network challenges, cloud-service data centers}
   year={2016},
   organization={IEEE}
 }
+
+@article{10.1145/2637364.2591980,
+author = {Shi, Weijie and Zhang, Linquan and Wu, Chuan and Li, Zongpeng and Lau, Francis C.M.},
+title = {An Online Auction Framework for Dynamic Resource Provisioning in Cloud Computing},
+year = {2014},
+issue_date = {June 2014},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {42},
+number = {1},
+issn = {0163-5999},
+url = {https://doi.org/10.1145/2637364.2591980},
+doi = {10.1145/2637364.2591980},
+abstract = {Auction mechanisms have recently attracted substantial attention as an efficient approach to pricing and resource allocation in cloud computing. This work, to the authors' knowledge, represents the first online combinatorial auction designed in the cloud computing paradigm, which is general and expressive enough to both (a) optimize system efficiency across the temporal domain instead of at an isolated time point, and (b) model dynamic provisioning of heterogeneous Virtual Machine (VM) types in practice. The final result is an online auction framework that is truthful, computationally efficient, and guarantees a competitive ratio ~ e+ 1 over e-1 ~ 3.30 in social welfare in typical scenarios. The framework consists of three main steps: (1) a tailored primal-dual algorithm that decomposes the long-term optimization into a series of independent one-shot optimization problems, with an additive loss of 1 over e-1 in competitive ratio, (2) a randomized auction sub-framework that applies primal-dual optimization for translating a centralized co-operative social welfare approximation algorithm into an auction mechanism, retaining a similar approximation ratio while adding truthfulness, and (3) a primal-dual update plus dual fitting algorithm for approximating the one-shot optimization with a ratio λ close to e. The efficacy of the online auction framework is validated through theoretical analysis and trace-driven simulation studies. We are also in the hope that the framework, as well as its three independent modules, can be instructive in auction design for other related problems.},
+journal = {SIGMETRICS Perform. Eval. Rev.},
+month = {jun},
+pages = {71–83},
+numpages = {13},
+keywords = {cloud computing, combinatorial auction, online algorithms, pricing, resource allocation, truthful mechanisms}
+}
+
+@inproceedings{Shi-SIGMETRIC-2014,
+author = {Shi, Weijie and Zhang, Linquan and Wu, Chuan and Li, Zongpeng and Lau, Francis C.M.},
+title = {An Online Auction Framework for Dynamic Resource Provisioning in Cloud Computing},
+year = {2014},
+isbn = {9781450327893},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2591971.2591980},
+doi = {10.1145/2591971.2591980},
+booktitle = {The 2014 ACM International Conference on Measurement and Modeling of Computer Systems},
+pages = {71–83},
+numpages = {13},
+keywords = {online algorithms, truthful mechanisms, combinatorial auction, resource allocation, cloud computing, pricing},
+location = {Austin, Texas, USA},
+series = {SIGMETRICS '14}
+}
+
+@ARTICLE{Zaman-2013,
+  author={Zaman, Sharrukh and Grosu, Daniel},
+  journal={IEEE Transactions on Cloud Computing}, 
+  title={A Combinatorial Auction-Based Mechanism for Dynamic VM Provisioning and Allocation in Clouds}, 
+  year={2013},
+  volume={1},
+  number={2},
+ pages={129-141},
+   publisher  = {IEEE},
+  doi={10.1109/TCC.2013.9}
+}
