--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -260,7 +260,7 @@ One can {\bf lower or raise the load level} of a resource by shifting
 the load in the cost function and adjusting the target load,
 $f'(\rho) = f(\rho + \Delta)$.
 
-To {\bf change the activation order} in the idlle-resource pooling,
+To {\bf change the activation order} in the idle-resource pooling,
 one can raise or lower the cost,
 e.g., by making the cost  $n$ times more expensive, $f'(\rho) = n f(\rho)$.
 For minor adjustment, one can use an additive form,
