--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -2,7 +2,7 @@
 
 In this paper, we have presented the cloud morphing vision for
 future distributed cloud services,
-proposed a cost functions based resource allocation model,
+proposed a resource allocation model based on cost fuctions,
 and presented how the idle-resource pooling works.
 We are planning to refine the proposed model and develop a working
 prototype system.
