--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -109,7 +109,7 @@ We use pseudo cost for manipulating resource allocation.
 Here, pseudo cost is not an actual monetary charge, but it is used to
 control resource utilization.
 
-There exist a large body of literature formulating resource allocation
+There exists a large body of literature formulating resource allocation
 as optimization problems.
 In this paper, we use terms and expressions borrowed from optimization
 theory. Our goal is, however, not to pursue theoretical optimum
