--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -48,7 +48,7 @@ layers/standard/.define layer set={%
     We introduce a convex cost function that enables autonomous
     load-balancing and idle-resource pooling within the cloud, and allows
     stakeholders to loosely control the utilization of each resource by
-    manipulating the cost function and the resource weights of micro-jobs.
+    manipulating the cost function or the resource weights of micro-jobs.
     We examine different cost tuning methods for adjusting
     utilization, and illustrate their behaviors by simulation.
 
