--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -8,7 +8,7 @@ the settings are described in the simulation tool.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{fig6.pdf}
+    \includegraphics[width=1.0\columnwidth]{fig6-4nodes.pdf}
     \vspace{-2.0ex}
     \caption{Cost manipulations: shifting the load +.2,
       +.4 and raising the weight for data access}
